Full feature drop: Clubs & Events (multi side channels + directors, club photos), TitanTap fix, Profile stats fix, comments drawer, permissions, ESLint cleanups

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
+# Dependencies
 node_modules/
-build/
-dist/
-.DS_Store
-.vscode/
 
-# env files
+# Build output
+client/build/
+server/dist/
+dist/
+*.log
+
+# Env / secrets
 .env
-client/.env
-server/.env
-*.env.local
+.env.*.local
+
+# Editor/OS
+.vscode/
+.DS_Store
+
+# Testing
+coverage/
+
+# Misc
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
