--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,20 @@
-# Dependencies
-node_modules/
+# Dependencies (ignore in all folders)
+**/node_modules/
 
 # Build output
 client/build/
 server/dist/
 dist/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Env / secrets
 .env
 .env.*.local
+client/.env
+server/.env
 
 # Editor/OS
 .vscode/
@@ -17,8 +22,3 @@ dist/
 
 # Testing
 coverage/
-
-# Misc
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
