--- a/server/package.json
+++ b/server/package.json
@@ -4,20 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node seed.js",
-    "migrate:hash": "node scripts/hash_existing_passwords.js"
+    "migrate:hash": "node scripts/hash_existing_passwords.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs-node": "^4.20.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.4.0",
     "faker": "^5.5.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.0"
+    "leo-profanity": "^1.7.0",
+    "mongoose": "^8.18.0",
+    "multer": "^1.4.5-lts.1",
+    "nsfwjs": "^2.4.2",
+    "sharp": "^0.33.4",
+    "uuid": "^9.0.1"
   }
 }
