--- a/client/package.json
+++ b/client/package.json
@@ -8,22 +8,26 @@
             "@testing-library/react": "^13.4.0",
             "@testing-library/user-event": "^13.5.0",
             "axios": "^1.7.2",
+            "chess.js": "^1.4.0",
             "lodash": "^4.17.21",
             "react": "^18.2.0",
+            "react-chessboard": "^4.7.3",
             "react-dom": "^18.2.0",
             "react-easy-crop": "^5.5.0",
             "react-icons": "^5.2.1",
             "react-router-dom": "^6.25.1",
             "react-scripts": "5.0.1",
+            "socket.io-client": "^4.8.1",
             "styled-components": "^5.3.11",
             "web-vitals": "^2.1.4"
       },
       "scripts": {
-            "start": "react-scripts start",
-            "build": "react-scripts build",
-            "test": "react-scripts test",
+            "start": "craco start",
+            "build": "craco build",
+            "test": "craco test",
             "eject": "react-scripts eject"
       },
+
       "eslintConfig": {
             "extends": [
                   "react-app",
@@ -41,5 +45,8 @@
                   "last 1 firefox version",
                   "last 1 safari version"
             ]
+      },
+      "devDependencies": {
+            "@craco/craco": "^7.1.0"
       }
 }
