--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chess.js": "^1.4.0",
     "concurrently": "^8.2.2",
+    "react-chessboard": "^5.6.1",
     "react-easy-crop": "^5.5.0"
   }
 }
-
