--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tensorflow/tfjs-node": "^4.20.0",
     "bcryptjs": "^3.0.2",
+    "chess.js": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -24,7 +25,10 @@
     "mongoose": "^8.18.0",
     "multer": "^1.4.5-lts.1",
     "nsfwjs": "^2.4.2",
+    "react-chessboard": "^5.6.1",
     "sharp": "^0.33.4",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^9.0.1"
   }
 }
