--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chess.js": "^1.4.0",
     "concurrently": "^8.2.2",
     "react-chessboard": "^5.6.1",
-    "react-easy-crop": "^5.5.0"
+    "react-easy-crop": "^5.5.0",
+    "three": "^0.180.0"
   }
 }
