--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
             "react-router-dom": "^6.25.1",
             "react-scripts": "5.0.1",
             "socket.io-client": "^4.8.1",
+            "stockfish": "^17.1.0",
             "styled-components": "^5.3.11",
             "web-vitals": "^2.1.4"
       },
@@ -27,7 +28,6 @@
             "test": "craco test",
             "eject": "react-scripts eject"
       },
-
       "eslintConfig": {
             "extends": [
                   "react-app",
