--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^8.2.2",
     "react-chessboard": "^5.6.1",
     "react-easy-crop": "^5.5.0",
+    "stockfish": "^17.1.0",
     "three": "^0.180.0"
   }
 }
