--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
     "chess.js": "^1.4.0",
     "concurrently": "^8.2.2",
     "react-chessboard": "^5.6.1",
     "react-easy-crop": "^5.5.0",
+    "redis": "^5.8.2",
     "stockfish": "^17.1.0",
     "three": "^0.180.0"
   }
