--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,36 @@
-# Dependencies (ignore in all folders)
+# Dependencies
 **/node_modules/
 
-# Build output
+# Builds
 client/build/
 server/dist/
 dist/
+build/
+
+# Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+pnpm-debug.log*
 
-# Env / secrets
+# Env / secrets (keep examples)
 .env
-.env.*.local
+.env.*
+!*.env.example
 client/.env
 server/.env
+!client/.env.example
+!server/.env.example
 
-# Editor/OS
-.vscode/
-.DS_Store
-
-# Testing
+# Caches / coverage
+.cache/
+.vite/
+.eslintcache
 coverage/
+
+# OS/Editor
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.swp
