--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
       "private": true,
       "dependencies": {
             "@react-spring/web": "^9.7.5",
+            "@socket.io/redis-adapter": "^8.3.0",
             "@testing-library/jest-dom": "^5.16.5",
             "@testing-library/react": "^13.4.0",
             "@testing-library/user-event": "^13.5.0",
@@ -17,6 +18,7 @@
             "react-icons": "^5.2.1",
             "react-router-dom": "^6.25.1",
             "react-scripts": "5.0.1",
+            "redis": "^5.8.3",
             "socket.io-client": "^4.8.1",
             "stockfish": "^17.1.0",
             "styled-components": "^5.3.11",
