--- a/client/package.json
+++ b/client/package.json
@@ -1,54 +1,56 @@
 {
-      "name": "client",
-      "version": "0.1.0",
-      "private": true,
-      "dependencies": {
-            "@react-spring/web": "^9.7.5",
-            "@socket.io/redis-adapter": "^8.3.0",
-            "@testing-library/jest-dom": "^5.16.5",
-            "@testing-library/react": "^13.4.0",
-            "@testing-library/user-event": "^13.5.0",
-            "axios": "^1.7.2",
-            "chess.js": "^1.4.0",
-            "lodash": "^4.17.21",
-            "react": "^18.2.0",
-            "react-chessboard": "^4.7.3",
-            "react-dom": "^18.2.0",
-            "react-easy-crop": "^5.5.0",
-            "react-icons": "^5.2.1",
-            "react-router-dom": "^6.25.1",
-            "react-scripts": "5.0.1",
-            "redis": "^5.8.3",
-            "socket.io-client": "^4.8.1",
-            "stockfish": "^16.0.0",
-            "styled-components": "^5.3.11",
-            "web-vitals": "^2.1.4"
-      },
-      "scripts": {
-            "start": "craco start",
-            "build": "craco build",
-            "test": "craco test",
-            "eject": "react-scripts eject"
-      },
-      "eslintConfig": {
-            "extends": [
-                  "react-app",
-                  "react-app/jest"
-            ]
-      },
-      "browserslist": {
-            "production": [
-                  ">0.2%",
-                  "not dead",
-                  "not op_mini all"
-            ],
-            "development": [
-                  "last 1 chrome version",
-                  "last 1 firefox version",
-                  "last 1 safari version"
-            ]
-      },
-      "devDependencies": {
-            "@craco/craco": "^7.1.0"
-      }
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@react-spring/web": "^9.7.5",
+    "@socket.io/redis-adapter": "^8.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "chess.js": "^1.4.0",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-chessboard": "^4.7.3",
+    "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.5.0",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.25.1",
+    "react-scripts": "5.0.1",
+    "redis": "^5.8.3",
+    "socket.io-client": "^4.8.1",
+    "stockfish": "^16.0.0",
+    "styled-components": "^5.3.11",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "http-proxy-middleware": "^3.0.5"
+  },
+  "proxy": "http://localhost:5000"
 }
