--- a/server/package.json
+++ b/server/package.json
@@ -15,17 +15,19 @@
     "@tensorflow/tfjs-node": "^4.20.0",
     "bcryptjs": "^3.0.2",
     "chess.js": "^1.4.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^7.4.0",
     "faker": "^5.5.3",
+    "ffmpeg-static": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "jsonwebtoken": "^9.0.2",
     "leo-profanity": "^1.7.0",
     "mongoose": "^8.18.0",
     "multer": "^1.4.5-lts.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "ffmpeg-static": "^5.1.0",
+    "nodemailer": "^7.0.10",
     "nsfwjs": "^2.4.2",
     "react-chessboard": "^5.6.1",
     "sharp": "^0.33.4",
