--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs-node": "^4.20.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "chess.js": "^1.4.0",
     "cookie-parser": "^1.4.7",
